--- a/player.html
+++ b/player.html
@@ -34,10 +34,10 @@
     </style>
 </head>
 <body>
-    <h1>HTML5 Audio Player</h1>
+    <h1>Rodio Player</h1>
 
     <audio controls>
-        <source src="your-audio-file.mp3" type="audio/mp3">
+        <source src="https://stream.rodio.ir/listen/noheh/radio.mp3" type="audio/mp3">
         Your browser does not support the audio element.
     </audio>
 </body>
