--- a/player.html
+++ b/player.html
@@ -30,13 +30,13 @@
         }
 
         button {
-            background-color: white;
+  background-color: white;
             color: black;
             border: none;
             padding: 20px 40px;
             margin: 10px;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 50%; /* Make the button circular */
             font-size: 28px; /* Larger font size */
             font-weight: bold; /* Bold font */
             font-family: 'Vazir', sans-serif; /* Set the font for the button */
