--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodio | رودیو</title>
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
-    <style>
+   <style>
         body {
             text-align: center;
             background-color: black;
@@ -30,16 +30,24 @@
         }
 
         button {
-  background-color: white;
+            background-color: white;
             color: black;
             border: none;
-            padding: 20px 40px;
+            padding: 20px;
             margin: 10px;
             cursor: pointer;
             border-radius: 50%; /* Make the button circular */
             font-size: 28px; /* Larger font size */
             font-weight: bold; /* Bold font */
             font-family: 'Vazir', sans-serif; /* Set the font for the button */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        button::before {
+            content: "\25B6"; /* Unicode character for a right-pointing triangle (play icon) */
+            font-size: 36px;
         }
 
         button:hover {
@@ -49,8 +57,12 @@
         /* Mobile-friendly adjustments */
         @media screen and (max-width: 600px) {
             button {
-                padding: 30px 60px;
+                padding: 30px;
                 font-size: 36px; /* Larger font size for mobile */
+            }
+
+            button::before {
+                font-size: 48px;
             }
         }
     </style>
