--- a/player.html
+++ b/player.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodio | رودیو</title>
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
-   <style>
+    <style>
         body {
             text-align: center;
             background-color: black;
@@ -71,7 +71,7 @@
     <div id="play-button-container">
         <h1>رودیو نوحه</h1>
 
-        <button id="playPauseBtn">Play</button>
+        <button id="playPauseBtn"></button>
     </div>
 
     <script>
@@ -81,10 +81,8 @@
         playPauseBtn.addEventListener("click", function() {
             if (audio.paused) {
                 audio.play();
-                playPauseBtn.innerHTML = "توقف";
             } else {
                 audio.pause();
-                playPauseBtn.innerHTML = "پخش";
             }
         });
     </script>
