--- a/player.html
+++ b/player.html
@@ -33,13 +33,21 @@
             background-color: white;
             color: black;
             border: none;
-            padding: 20px 40px;
+            padding: 20px;
             margin: 10px;
             cursor: pointer;
             border-radius: 50%; /* Make the button circular */
             font-size: 28px; /* Larger font size */
             font-weight: bold; /* Bold font */
             font-family: 'Vazir', sans-serif; /* Set the font for the button */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        button::before {
+            content: "\25B6"; /* Unicode character for a right-pointing triangle (play icon) */
+            font-size: 36px;
         }
 
         button:hover {
@@ -49,8 +57,12 @@
         /* Mobile-friendly adjustments */
         @media screen and (max-width: 600px) {
             button {
-                padding: 30px 60px;
+                padding: 30px;
                 font-size: 36px; /* Larger font size for mobile */
+            }
+
+            button::before {
+                font-size: 48px;
             }
         }
     </style>
@@ -59,7 +71,7 @@
     <div id="play-button-container">
         <h1>رودیو نوحه</h1>
 
-        <button id="playPauseBtn">Play</button>
+        <button id="playPauseBtn"></button>
     </div>
 
     <script>
@@ -69,10 +81,8 @@
         playPauseBtn.addEventListener("click", function() {
             if (audio.paused) {
                 audio.play();
-                playPauseBtn.innerHTML = "توقف";
             } else {
                 audio.pause();
-                playPauseBtn.innerHTML = "پخش";
             }
         });
     </script>
