--- a/mobile.html
+++ b/mobile.html
@@ -23,9 +23,8 @@
             background-color: white;
             color: black;
             border: none;
-            padding: 30px;
-            margin: 10px;
-            cursor: pointer;
+            width: 100px; /* Adjust the width as needed */
+            height: 100px; /* Ensure the height is the same as the width to make a perfect circle */
             border-radius: 50%; /* Make the button circular */
             font-size: 36px; /* Larger font size */
             font-weight: bold; /* Bold font */
