--- a/mobile.html
+++ b/mobile.html
@@ -45,8 +45,11 @@
     </style>
 </head>
 <body>
-    <button id="playPauseBtn"></button>
+    <div id="play-button-container">
+        <h1>رودیو نوحه</h1>
 
+        <button id="playPauseBtn"></button>
+    </div>
     <script>
         var audio = new Audio("https://stream.rodio.ir/listen/noheh/radio.mp3"); // Replace with the actual path or URL of your audio file
         var playPauseBtn = document.getElementById("playPauseBtn");
