--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
             font-family: 'Vazir', sans-serif;
             text-align: center;
             background-color: #FFFFFF;
-            margin: 0;
-            overflow: hidden;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
             color: #303645;
         }
 
@@ -39,10 +33,20 @@
             margin-bottom: 20px;
         }
 
+        .iframe-container {
+            width: 100%;
+            max-width: 600px; /* Adjust the max-width as needed */
+            margin: 0 auto;
+        }
+
         iframe {
             width: 100%;
             min-height: 150px;
             border: 0;
+        }
+
+        img {
+            cursor: pointer;
         }
     </style>
 </head>
@@ -50,10 +54,14 @@
 
     <h1>رودیو | Rodio</h1>
 
-    <iframe src="https://stream.rodio.ir/public/noheh/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
-    <iframe src="https://stream.rodio.ir/public/noheh/ondemand/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
+    <div class="iframe-container">
+        <iframe src="https://stream.rodio.ir/public/noheh/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
+        <iframe src="https://stream.rodio.ir/public/noheh/ondemand/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
+    </div>
 
-    <p><img referrerpolicy="origin" id="jxlzwlaoapfusizpfukznbqe" style="cursor:pointer" onclick='window.open("https://logo.samandehi.ir/Verify.aspx?id=145962&p=rfthaodsdshwpfvlgvkauiwk", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt='logo-samandehi' src='https://logo.samandehi.ir/logo.aspx?id=145962&p=nbpdshwlujynbsiywlbqodrf' /></p>
+    <p>
+        <img referrerpolicy="origin" id="jxlzwlaoapfusizpfukznbqe" onclick='window.open("https://logo.samandehi.ir/Verify.aspx?id=145962&p=rfthaodsdshwpfvlgvkauiwk", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt='logo-samandehi' src='https://logo.samandehi.ir/logo.aspx?id=145962&p=nbpdshwlujynbsiywlbqodrf' />
+    </p>
 
 </body>
 </html>
