--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             border: 0;
         }
 
+        #secondIframe {
+            min-height: 600px; /* Set the height for the second iframe */
+        }
+
         img {
             cursor: pointer;
         }
@@ -56,7 +60,7 @@
 
     <div class="iframe-container">
         <iframe src="https://stream.rodio.ir/public/noheh/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
-        <iframe src="https://stream.rodio.ir/public/noheh/ondemand/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
+        <iframe id="secondIframe" src="https://stream.rodio.ir/public/noheh/ondemand/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
     </div>
 
     <p>
