--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
     <p>
         <img referrerpolicy="origin" id="jxlzwlaoapfusizpfukznbqe" onclick='window.open("https://logo.samandehi.ir/Verify.aspx?id=145962&p=rfthaodsdshwpfvlgvkauiwk", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt='logo-samandehi' src='https://logo.samandehi.ir/logo.aspx?id=145962&p=nbpdshwlujynbsiywlbqodrf' />
     </p>
+    <footer>
+        <p>
+            رودیو: پخش مستمر و پادکست نوحه، عزاداری، مرثیه
+            <br>
+            دارنده مجوز از سازمان تنظیم مقررات صوت و تصویر فراگیر (<a href="https://satra.ir/" target="_blank">ساترا</a>)
+        </p>
+    </footer>
 
 </body>
 </html>
