--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
         body {
             font-family: 'Vazir', sans-serif;
             text-align: center;
-            background-color: #FFFFFF;
+            background-color: #000000; /* Set the background color to black */
             color: #303645;
+            margin: 0;
+            overflow: hidden;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
         }
 
         h1 {
