--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         img {
             cursor: pointer;
         }
+          footer {
+            margin-top: 20px;
+            font-family: 'Vazir', sans-serif;
+            color: #FFFFFF; /* Set the text color to white */
     </style>
 </head>
 <body>
