--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         h1 {
             font-size: 2em;
-            color: #E3007B;
+            color: #FFFFFF;
             margin-bottom: 20px;
         }
 
