--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </head>
 <body>
 
-    <h1>رودیو | Rodio</h1>
+    <h1>Rodio | رودیو نوحه</h1>
 
     <div class="iframe-container">
         <iframe src="https://stream.rodio.ir/public/noheh/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
