--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <h1>Rodio | رودیو نوحه</h1>
 
     <div class="iframe-container">
-        <iframe src="https://stream.rodio.ir/public/noheh/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
-        <iframe id="secondIframe" src="https://stream.rodio.ir/public/noheh/ondemand/embed?theme=light" frameborder="0" allowtransparency="true"></iframe>
+        <iframe src="https://stream.rodio.ir/public/rodio/embed?theme=light" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 150px; border: 0;"></iframe>
+        <iframe src="https://stream.rodio.ir/public/rodio/ondemand/embed?theme=light" frameborder="0" allowtransparency="true" style="width: 100%; min-height: 400px; border: 0;"></iframe>
     </div>
 
     <p>
