--- a/player.html
+++ b/player.html
@@ -51,7 +51,7 @@
         <button id="playPauseBtn"></button>
     </div>
     <script>
-        var audio = new Audio("https://stream.rodio.ir/listen/rodio/radio.mp3"); // Replace with the actual path or URL of your audio file
+        var audio = new Audio("https://stream.rodio.ir/listen/noheh/radio.mp3"); // Replace with the actual path or URL of your audio file
         var playPauseBtn = document.getElementById("playPauseBtn");
 
         playPauseBtn.addEventListener("click", function() {
