--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
         img {
             cursor: pointer;
         }
-          footer {
+
+        footer {
             margin-top: 20px;
             font-family: 'Vazir', sans-serif;
             color: #FFFFFF; /* Set the text color to white */
+        }
     </style>
 </head>
 <body>
@@ -64,6 +66,12 @@
     <p>
         <img referrerpolicy="origin" id="jxlzwlaoapfusizpfukznbqe" onclick='window.open("https://logo.samandehi.ir/Verify.aspx?id=145962&p=rfthaodsdshwpfvlgvkauiwk", "Popup","toolbar=no, scrollbars=no, location=no, statusbar=no, menubar=no, resizable=0, width=450, height=630, top=30")' alt='logo-samandehi' src='https://logo.samandehi.ir/logo.aspx?id=145962&p=nbpdshwlujynbsiywlbqodrf' />
     </p>
+
+    <!-- Insert the iframe here -->
+    <div class="iframe-container">
+        <iframe src="http://fotros.ir/#Media" id="secondIframe"></iframe>
+    </div>
+
     <footer>
         <p>
             رودیو: پخش مستمر و پادکست نوحه، عزاداری، مرثیه
