--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     </p>
 
     <!-- Insert the iframe here -->
-    <div class="iframe-container">
-        <iframe src="http://fotros.ir/#Media|3de844cfedce7e8a76bee91d86db0810" id="secondIframe"></iframe>
-    </div>
+<div class="iframe-container">
+    <iframe src="http://fotros.ir/#Media|3de844cfedce7e8a76bee91d86db0810" id="secondIframe">
+        <p>Your browser does not support iframes or the content cannot be displayed securely. <a href="http://fotros.ir/#Media|3de844cfedce7e8a76bee91d86db0810" target="_blank">Click here to view the content</a>.</p>
+    </iframe>
+</div>
 
     <footer>
         <p>
