--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
 
         iframe {
             width: 100%;
-            min-height: 150px;
+            height: 600px; /* Set a fixed height or use min-height */
             border: 0;
-        }
-
-        #secondIframe {
-            min-height: 600px; /* Set the height for the second iframe */
         }
 
         img {
@@ -68,11 +64,11 @@
     </p>
 
     <!-- Insert the iframe here -->
-<div class="iframe-container">
-    <iframe src="https://tanzil.net/#1:1" id="secondIframe">
-        <p>Your browser does not support iframes or the content cannot be displayed securely. <a href="http://fotros.ir/#Media|3de844cfedce7e8a76bee91d86db0810" target="_blank">Click here to view the content</a>.</p>
-    </iframe>
-</div>
+    <div class="iframe-container">
+        <iframe src="https://tanzil.net/#1:1" id="secondIframe">
+            <p>Your browser does not support iframes or the content cannot be displayed securely. <a href="https://tanzil.net/#1:1" target="_blank">Click here to view the content</a>.</p>
+        </iframe>
+    </div>
 
     <footer>
         <p>
