--- a/index.html
+++ b/index.html
@@ -65,9 +65,11 @@
 
     <!-- Insert the iframe here -->
     <div class="iframe-container">
-        <iframe src="https://tanzil.net/#1:1" id="secondIframe">
-            <p>Your browser does not support iframes or the content cannot be displayed securely. <a href="https://tanzil.net/#1:1" target="_blank">Click here to view the content</a>.</p>
-        </iframe>
+  <iframe iframe width="770" height="1000" 
+     src="http://tanzil.net/?embed=true&defTrans=ar.muyassar" 
+     style="overflow-x:hidden; overflow-y:auto;" scrolling="no" frameborder="0">
+  </iframe>
+
     </div>
 
     <footer>
