--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Insert the iframe here -->
     <div class="iframe-container">
   <iframe iframe width="770" height="1000" 
-     src="http://tanzil.net/?embed=true&defTrans=ar.muyassar" 
+     src="http://tanzil.net/?embed=true&defTrans=fa.makarem" 
      style="overflow-x:hidden; overflow-y:auto;" scrolling="no" frameborder="0">
   </iframe>
 
