--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             font-family: 'Vazir', sans-serif;
             text-align: center;
             background-color: #000000; /* Set the background color to black */
+            margin: 0; /* Remove default body margin */
+            padding: 0; /* Remove default body padding */
         }
 
         h1 {
@@ -34,14 +36,17 @@
 
         .iframe-container {
             width: 100%;
-            max-width: 600px; /* Adjust the max-width as needed */
+            height: 100vh; /* Use the full viewport height */
             margin: 0 auto;
+            overflow: hidden; /* Hide overflow */
         }
 
         iframe {
             width: 100%;
-            height: 600px; /* Set a fixed height or use min-height */
+            height: 100%; /* Use the full height of the container */
             border: 0;
+            overflow-x: hidden; /* Hide horizontal scrollbar */
+            overflow-y: auto; /* Allow vertical scrolling */
         }
 
         img {
@@ -65,11 +70,7 @@
 
     <!-- Insert the iframe here -->
     <div class="iframe-container">
-  <iframe iframe width="1000" height="1000" 
-     src="http://tanzil.net/?embed=true&defTrans=fa.makarem" 
-     style="overflow-x:hidden; overflow-y:auto;" scrolling="no" frameborder="0">
-  </iframe>
-
+        <iframe src="http://tanzil.net/?embed=true&defTrans=fa.makarem" scrolling="no" frameborder="0"></iframe>
     </div>
 
     <footer>
