--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- Insert the iframe here -->
     <div class="iframe-container">
-        <iframe src="http://tanzil.net/?embed=true&defTrans=fa.makarem" scrolling="no" frameborder="0"></iframe>
+        <iframe src="https://tanzil.net/?embed=true&defTrans=fa.makarem" scrolling="no" frameborder="0"></iframe>
     </div>
 
     <footer>
