--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#303645">
 
-    <title>رودیو | Rodio: پخش مستمر نوحه و عزاداری</title>
+    <title>رودیو | Rodio: پخش مستمر قرآن، نوحه و عزاداری</title>
 
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="/manifest.json?v=1">
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-    <h1>Rodio | رودیو نوحه</h1>
+    <h1>Rodio |  رودیو نوحه و قرآن</h1>
 
     <!-- Insert the iframe here -->
     <div class="iframe-container">
@@ -71,7 +71,7 @@
 
     <footer>
         <p>
-            رودیو: پخش مستمر و پادکست نوحه، عزاداری، مرثیه
+            رودیو: پخش مستمر و پادکست قرآن، نوحه، عزاداری، مرثیه
             <br>
             دارنده مجوز از سازمان تنظیم مقررات صوت و تصویر فراگیر (<a href="https://satra.ir/" target="_blank">ساترا</a>)
         </p>
